--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body class="ma0 avenir bg-near-white">
 <header>
-<div class="pb3-m pb6-l bg-black">
+<div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -46,11 +46,11 @@ Vendors
 </div>
 </div>
 </nav>
-<div class="tc-l pv3 ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
+<div class=tc-l>
+<h1 class=dn>
 madewhere
 </h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
+<h2 class=dn>
 A website dedicated to quality, fairly made goods.
 </h2>
 </div>
@@ -58,113 +58,176 @@ A website dedicated to quality, fairly made goods.
 </header>
 <main class=pb7 role=main>
 <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-<p>Read more <a href=https://madewhere.co/about/>about us</a>, <a href=https://madewhere.co/contribute/>contribute</a> to our list, or start browsing.</p>
+<p>A website dedicated to quality, fairly made goods. Read more <a href=https://madewhere.co/about/>about us</a>,
+<a href=https://madewhere.co/contribute/>contribute</a> to our list, or start browsing.</p>
 </article>
 <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
 <p class="f3 b mb1 ttc"></p>
 <h2 class="flex-none ttc pb2 mb0">categories</h2>
 <p class="pb2 mv0">Goods arranged by their use.</p>
-<div class=f5>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/accessories/>
+<ul class="f5 ph0 mh0">
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/accessories/>
 <span class=ttc>Accessories</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/appliances/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/appliances/>
 <span class=ttc>appliances</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/bags/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/bags/>
 <span class=ttc>Bags</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/bakeware/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/bakeware/>
 <span class=ttc>Bakeware</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/clothing/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/clothing/>
 <span class=ttc>Clothing</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/cookware/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/cookware/>
 <span class=ttc>Cookware</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/dinnerware/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/dinnerware/>
 <span class=ttc>Dinnerware</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/flatware/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/flatware/>
 <span class=ttc>flatware</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/furniture/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/furniture/>
 <span class=ttc>furniture</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/glassware/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/glassware/>
 <span class=ttc>glassware</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/housewares/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/housewares/>
 <span class=ttc>Housewares</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/kitchen/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/kitchen/>
 <span class=ttc>Kitchen</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/musical-instruments/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/musical-instruments/>
 <span class=ttc>Musical Instruments</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/office/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/office/>
 <span class=ttc>Office</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/outdoor/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/outdoor/>
 <span class=ttc>Outdoor</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/personal/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/personal/>
 <span class=ttc>Personal</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/shoes/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/shoes/>
 <span class=ttc>Shoes</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/stationery/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/stationery/>
 <span class=ttc>Stationery</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/storage/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/storage/>
 <span class=ttc>storage</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/categories/tools/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/tools/>
 <span class=ttc>tools</span>
 </a>
-</div>
+</li>
+</ul>
 </div>
 <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
 <h2 class="flex-none ttc pb2 mb0">origins</h2>
 <p class="pb2 mv0">The countries where goods are manufactured.</p>
-<div class=f5>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/australia/>
+<ul class="f5 ph0 mh0">
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/australia/>
 <span class=ttc>Australia</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/belgium/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/belgium/>
 <span class=ttc>Belgium</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/canada/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/canada/>
 <span class=ttc>Canada</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/england/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/england/>
 <span class=ttc>England</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/france/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/france/>
 <span class=ttc>France</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/germany/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/germany/>
 <span class=ttc>Germany</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/hungary/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/hungary/>
 <span class=ttc>hungary</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/japan/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/japan/>
 <span class=ttc>Japan</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/netherlands/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/netherlands/>
 <span class=ttc>Netherlands</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/usa/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/usa/>
 <span class=ttc>USA</span>
 </a>
-<a class="ba b--moon-gray bg-light-gray br2 color-inherit dib hover-bg-moon-gray link mt2 ph2 pv1" href=/origins/vietnam/>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/vietnam/>
 <span class=ttc>vietnam</span>
 </a>
-</div>
+</li>
+</ul>
 </div>
 <div class="pa3 pa4-ns w-100 w-70-ns center">
 <h1 class=flex-none>
