--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/bulgaria/>
+<span class=ttc>bulgaria</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/canada/>
 <span class=ttc>Canada</span>
 </a>
@@ -218,6 +223,26 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/portugal/>
+<span class=ttc>portugal</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/taiwan/>
+<span class=ttc>taiwan</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/thailand/>
+<span class=ttc>thailand</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/turkey/>
+<span class=ttc>turkey</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/usa/>
 <span class=ttc>USA</span>
 </a>
@@ -234,6 +259,25 @@ A website dedicated to quality, fairly made goods.
 Recent Brands
 </h1>
 <section class="w-100 mw8">
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=/brands/usa-pan/ class="color-inherit dim link">
+USA Pan
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
+</div>
+<a href=/brands/usa-pan/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
 <div class="relative w-100 mb4">
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
@@ -272,28 +316,14 @@ Epicurean is a USA-based manufacturer of composite cutting surfaces. They have a
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/estwing/ class="color-inherit dim link">
-Estwing
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers.
-</div>
-<a href=/brands/estwing/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/brands/estwing/ class="link black dim">
+Estwing
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=/brands/channellock/ class="link black dim">
 Channellock
@@ -307,11 +337,6 @@ Nab Leather Co
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=/brands/tanner-goods/ class="link black dim">
 Tanner Goods
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/d-addario/ class="link black dim">
-D'Addario
 </a>
 </h2>
 <a href=/brands/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Brands</a>
