--- a/origins/canada/index.html
+++ b/origins/canada/index.html
@@ -65,6 +65,22 @@ Canada
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/channellock/ class="link black dim">
+Channellock
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
+Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/nab-leather/ class="link black dim">
 Nab Leather Co
 </a>
@@ -86,6 +102,21 @@ Reigning Champ
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Reigning Champ is an athletic wear designer and manufacturer, based in Vancouver, BC. All of their products are made in Canada.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/mission-workshop/ class="link black dim">
+Mission Workshop
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
 </div>
 </div>
 </div>
