--- a/origins/china/index.html
+++ b/origins/china/index.html
@@ -65,6 +65,22 @@ China
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/channellock/ class="link black dim">
+Channellock
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
+Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/le-cruset/ class="link black dim">
 Le Creuset
 </a>
@@ -87,6 +103,22 @@ All-Clad
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Unfortunately they have begun outsourcing some manufacturing to China—usually identifiable by significantly lower prices—but many of their products are still manufactured in the USA.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
 </div>
