--- a/origins/germany/index.html
+++ b/origins/germany/index.html
@@ -165,6 +165,22 @@ ZWILLING J.A. Henckles is the parent company of several brands, including Staub 
 </div>
 </div>
 </div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
+</div>
+</div>
+</div>
+</div>
 </section>
 </div>
 </main>
