--- a/origins/index.html
+++ b/origins/index.html
@@ -100,10 +100,43 @@ Demeyere offers a wide range of made in belgium cookware.
 </div>
 </div>
 <h2 class=f1>
+<a href=/origins/bulgaria/ class="link blue hover-black">
+bulgaria
+</a>
+</h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
+</div>
+</div>
+</div>
+<h2 class=f1>
 <a href=/origins/canada/ class="link blue hover-black">
 Canada
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/channellock/ class="link black dim">
+Channellock
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
+Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -134,6 +167,19 @@ Reigning Champ is an athletic wear designer and manufacturer, based in Vancouver
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/mission-workshop/ class="link black dim">
+Mission Workshop
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/redwood-classics/ class="link black dim">
 Redwood Classics
 </a>
@@ -148,6 +194,20 @@ Casual wear manufacturer based in Canada. A cursory glance suggests they make al
 China
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/channellock/ class="link black dim">
+Channellock
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
+Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -172,6 +232,20 @@ All-Clad
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 All-Clad is known for their clad cookware, but the also offer utensils and various kitchen goods. Unfortunately they have begun outsourcing some manufacturing to China—usually identifiable by significantly lower prices—but many of their products are still manufactured in the USA.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
 </div>
@@ -208,6 +282,20 @@ While Vollrath doesn&rsquo;t sell directly to consumers, their goods are carried
 England
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/le-cruset/ class="link black dim">
+Le Creuset
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Le Creuset is a famous cast iron bakeware manufacturer. Probably best known for their Dutch ovens, but they make a considerable variety of kitchen products.
+While many of their cast iron products are made in France, this does not extend to all of their product lines, which are made in a variety of countries.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -305,6 +393,7 @@ Duralex
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Duralex is a manufacturer of glassware; they specialize in drinkware and dinnerware, and is known for its robustness. All of their glassware is made in France, and can be bought direct from their USA distribution.
+In 2021 they were purchased by Pyrex, but while sharing a name with the American Pyrex (owned by Corning), Pyrex EU appears to be a different company.
 </div>
 </div>
 </div>
@@ -401,6 +490,20 @@ ZWILLING J.A. Henckels
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 ZWILLING J.A. Henckles is the parent company of several brands, including Staub and Demeyere.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
 </div>
@@ -512,24 +615,10 @@ The Moccamaster is a highly regarded automatic drip coffee maker, which is made 
 </div>
 </div>
 <h2 class=f1>
-<a href=/origins/unknown/ class="link blue hover-black">
-Unknown
+<a href=/origins/portugal/ class="link blue hover-black">
+portugal
 </a>
 </h2>
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/channellock/ class="link black dim">
-Channellock
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
-Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
-</div>
-</div>
-</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -544,6 +633,94 @@ While many of their cast iron products are made in France, this does not extend 
 </div>
 </div>
 </div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/mission-workshop/ class="link black dim">
+Mission Workshop
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear. Much of their technical gear isn&rsquo;t made in the USA, so be sure to check on a product-by-product basis.
+</div>
+</div>
+</div>
+<h2 class=f1>
+<a href=/origins/taiwan/ class="link blue hover-black">
+taiwan
+</a>
+</h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/estwing/ class="link black dim">
+Estwing
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers which are made in Taiwan.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/channellock/ class="link black dim">
+Channellock
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
+Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
+</div>
+</div>
+</div>
+<h2 class=f1>
+<a href=/origins/thailand/ class="link blue hover-black">
+thailand
+</a>
+</h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/le-cruset/ class="link black dim">
+Le Creuset
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Le Creuset is a famous cast iron bakeware manufacturer. Probably best known for their Dutch ovens, but they make a considerable variety of kitchen products.
+While many of their cast iron products are made in France, this does not extend to all of their product lines, which are made in a variety of countries.
+</div>
+</div>
+</div>
+<h2 class=f1>
+<a href=/origins/turkey/ class="link blue hover-black">
+turkey
+</a>
+</h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/cambro/ class="link black dim">
+Cambro
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
+Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
+</div>
+</div>
+</div>
+<h2 class=f1>
+<a href=/origins/unknown/ class="link blue hover-black">
+Unknown
+</a>
+</h2>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -645,6 +822,19 @@ USA
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/usa-pan/ class="link black dim">
+USA Pan
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/epicurean/ class="link black dim">
 Epicurean
 </a>
@@ -663,7 +853,7 @@ Estwing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers.
+Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers which are made in Taiwan.
 </div>
 </div>
 </div>
@@ -967,7 +1157,7 @@ Cambro
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA.
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
 Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
