--- a/origins/taiwan/index.html
+++ b/origins/taiwan/index.html
@@ -2,22 +2,22 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Commercial | madewhere</title>
+<title>taiwan | madewhere</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Caters to commercial entities.">
+<meta name=description content>
 <meta name=generator content="Hugo 0.92.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/tags/commercial/index.xml rel=alternate type=application/rss+xml title=madewhere>
-<link href=/tags/commercial/index.xml rel=feed type=application/rss+xml title=madewhere>
-<meta property="og:title" content="Commercial">
-<meta property="og:description" content="Caters to commercial entities.">
+<link href=/origins/taiwan/index.xml rel=alternate type=application/rss+xml title=madewhere>
+<link href=/origins/taiwan/index.xml rel=feed type=application/rss+xml title=madewhere>
+<meta property="og:title" content="taiwan">
+<meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://madewhere.co/tags/commercial/">
-<meta itemprop=name content="Commercial">
-<meta itemprop=description content="Caters to commercial entities."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Commercial">
-<meta name=twitter:description content="Caters to commercial entities.">
+<meta property="og:url" content="https://madewhere.co/origins/taiwan/">
+<meta itemprop=name content="taiwan">
+<meta itemprop=description content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="taiwan">
+<meta name=twitter:description content>
 <meta name=referrer content="no-referrer">
 </head>
 <body class="ma0 avenir bg-near-white">
@@ -48,20 +48,14 @@ Vendors
 </nav>
 <div class=tc-l>
 <h1 class=dn>
-Commercial
+taiwan
 </h1>
-<h2 class=dn>
-Caters to commercial entities.
-</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
 <article class="cf pa3 pa4-m pa4-l">
 <div class="center mw8 nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
-<p>Brands listed as &ldquo;commercial&rdquo; provide products that are catered more toward
-business. In many cases, they may not have direct-to-consumer channels for
-selling their products.</p>
 </div>
 </article>
 <div class="mw8 center">
@@ -71,13 +65,12 @@ selling their products.</p>
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/cambro/ class="link black dim">
-Cambro
+<a href=/brands/estwing/ class="link black dim">
+Estwing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
-Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
+Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers which are made in Taiwan.
 </div>
 </div>
 </div>
@@ -87,13 +80,13 @@ Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers,
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/vollrath/ class="link black dim">
-Vollrath
+<a href=/brands/channellock/ class="link black dim">
+Channellock
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Vollrath is a cookware and bakeware company, focused on commercial kitchen. A substantial portion of their goods are made in the USA, including their &ldquo;Jacob&rsquo;s Pride&rdquo; line of clad cookware which is relatively inexpensive vs other clad lines.
-While Vollrath doesn&rsquo;t sell directly to consumers, their goods are carried by WebstaurantStore which lists a prominent &ldquo;Made in USA&rdquo; badge on relevant products.
+Channellock is a tool manufacturer, probably best known for their channel-locking pliers. They offer a variety of gripping tools, made in the USA.
+Unfortunately not all of their products are USA-made, but those that are carry a prominent label. Those that are not do not denote their origin in an obvious manner.
 </div>
 </div>
 </div>
