--- a/brands/index.html
+++ b/brands/index.html
@@ -136,7 +136,7 @@ Cambro
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA.
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
 Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
@@ -238,6 +238,7 @@ Duralex
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Duralex is a manufacturer of glassware; they specialize in drinkware and dinnerware, and is known for its robustness. All of their glassware is made in France, and can be bought direct from their USA distribution.
+In 2021 they were purchased by Pyrex, but while sharing a name with the American Pyrex (owned by Corning), Pyrex EU appears to be a different company.
 </div>
 </div>
 </div>
@@ -265,7 +266,7 @@ Estwing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers.
+Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers which are made in Taiwan.
 </div>
 </div>
 </div>
@@ -686,13 +687,12 @@ Products which are made in England are explicitly market on product pages.
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/vollrath/ class="link black dim">
-Vollrath
+<a href=/brands/usa-pan/ class="link black dim">
+USA Pan
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Vollrath is a cookware and bakeware company, focused on commercial kitchen. A substantial portion of their goods are made in the USA, including their &ldquo;Jacob&rsquo;s Pride&rdquo; line of clad cookware which is relatively inexpensive vs other clad lines.
-While Vollrath doesn&rsquo;t sell directly to consumers, their goods are carried by WebstaurantStore which lists a prominent &ldquo;Made in USA&rdquo; badge on relevant products.
+USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
 </div>
 </div>
 </div>
@@ -768,7 +768,27 @@ In the United States, they are affiliated with Duralex although that affiliation
 </div>
 </div>
 </div>
-</section></article>
+</section>
+<ul class="pagination pagination-default">
+<li class="page-item disabled">
+<a aria-disabled=true aria-label=First class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;&#171;</span></a>
+</li>
+<li class="page-item disabled">
+<a aria-disabled=true aria-label=Previous class=page-link role=button tabindex=-1><span aria-hidden=true>&#171;</span></a>
+</li>
+<li class="page-item active">
+<a aria-current=page aria-label="Page 1" class=page-link role=button>1</a>
+</li>
+<li class=page-item>
+<a href=/brands/page/2/ aria-label="Page 2" class=page-link role=button>2</a>
+</li>
+<li class=page-item>
+<a href=/brands/page/2/ aria-label=Next class=page-link role=button><span aria-hidden=true>&#187;</span></a>
+</li>
+<li class=page-item>
+<a href=/brands/page/2/ aria-label=Last class=page-link role=button><span aria-hidden=true>&#187;&#187;</span></a>
+</li>
+</ul></article>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between items-center">
