--- a/origins/usa/index.html
+++ b/origins/usa/index.html
@@ -68,6 +68,21 @@ Products made in the United States of America.
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/usa-pan/ class="link black dim">
+USA Pan
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+USA Pan makes a distinctive style of baking pan, offering the usual suspects: baking sheets, muffin tins, loaf pans, etc.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/epicurean/ class="link black dim">
 Epicurean
 </a>
@@ -88,7 +103,7 @@ Estwing
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers.
+Estwing is a tool manufacturer, specializing in hammers. A large number of their products are USA-made, with exceptions being their specialty fiberglass and plastic hammers which are made in Taiwan.
 </div>
 </div>
 </div>
@@ -438,7 +453,7 @@ Cambro
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA.
+Cambro is best known for their food storage products, which are popular in food service but also excellent for home. The vast majority of these are made in the USA, at least for the USA market. They highlight all of their locations and purposes on their careers page, as well as the number of employees in each location.
 Cambro focuses on commercial markets and doesn&rsquo;t sell direct to consumers, but their products can be found on WebstaurantStore.
 </div>
 </div>
